# Drona-AI

./: DEMO_TEST.md  README.md
.claude/: settings.local.json
everest/: README.md  angular.json  package-lock.json  package.json  vercel.json
everest/src/: index.html  styles.css
everest/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
everest/src/discover/: discover.component.css  discover.component.ts  (+1 more)
mariana/: .env.example  .gitignore  Biology.json  LIVING_DOCUMENTATION.md  README.md  config.py  main.py  pyproject.toml  railway.toml
mariana/api/: discover.py  generate.py  pdf.py  suggestions.py  upload.py
mariana/data/: curriculum.json  curriculum_suggestions.py  syllabus.json
mariana/data/fixtures/: activities_generate_response.md  discover_response.json  generate_response.md  keywords_generate_response.md  quiz_generate_response.md
mariana/data/raw/: world_war_1.txt
mariana/json_data/: Chemistry.json  Earth and Environmental Science.json  English Advanced.json  English EALD.json  English Extension.json  English Life Skills.json  English Standard.json  English Studies.json  Mathematics Advanced.json  Mathematics Standard.json  Physics.json  Science Life Skills.json
mariana/models/: requests.py  resource.py  study_plan.py
mariana/scripts/: seed_vectordb.py  test_generate.py
mariana/scripts/output/: study_plan.md
mariana/services/: agent_service.py  curriculum_service.py  discovery_service.py  llm_service.py  plan_service.py  prompt_service.py  rag_service.py  upload_service.py
(+38 files in other folders)
